Fix cmd call on Windows